调整配置文件